Dev/src/FinancialForce Reporting/objects/InquiryTemplateTransposeDrill__c.object
<CustomObject>
    <description>Stores the action view template used when drilling on transposed fields.</description>
    <fields>
        <fullName>InquiryTemplateColumn__c</fullName>
        <label>Action View Template Column</label>
        <referenceTo>InquiryTemplateColumn__c</referenceTo>
        <relationshipName>TransposeDrillTemplates</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>InquiryTemplate__c</fullName>
        <label>Action View Template</label>
        <referenceTo>InquiryTemplate__c</referenceTo>
        <relationshipName>TransposeDrillTemplates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TransposeItemValue__c</fullName>
        <label>Value</label>
        <length>120</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransposeItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dataview Transpose Item</label>
        <referenceTo>DataViewTransposeItem__c</referenceTo>
        <relationshipName>TransposeDrillTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Action View Template Transpose Drill</label>
    <nameField>
        <displayFormat>ITTD-{0000}</displayFormat>
        <label>Action View Template Transpose Drill Nam</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action View Template Transpose Drills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>